<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
>
    <PreferenceCategory android:title="自定义">

        <SwitchPreference
            android:key="is_traditional"
            android:title="@string/use_traditional"/>

    </PreferenceCategory>


    <PreferenceCategory android:title="应用">
        <Preference
            android:key="log_off"
            android:summary="@string/logoff_summary"
           android:title="@string/logoff"/>
        <EditTextPreference
            android:key="feedback"
            android:hint="@string/feedback_hint"
            android:summary="@string/feedback_desc"
            android:title="@string/feedback"/>
        <Preference
            android:key="about"
            android:title="@string/about"/>
    </PreferenceCategory>


</PreferenceScreen>