<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:showIn="@layout/activity_main">
    <LinearLayout
        android:id="@+id/tagsLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/categoryConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <TextView
                android:id="@+id/cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="分類："/>
            <TextView
                android:id="@+id/showAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="全部"
                android:textColor="@color/link_selector"
                app:layout_constraintRight_toLeftOf="parent"/>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignContent="flex_start"
                app:alignItems="flex_start"
                app:flexWrap="wrap"
                app:justifyContent="flex_start"
                app:layout_constraintTop_toBottomOf="@id/cat">

                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/allCat"
                    style="@style/chipStyle"
                    app:mcv_chipText="全部"/>
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/fun"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/fun"/>
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/love"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/love"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/sports"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/sports"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/exciting"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/exciting"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/magic"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/magic"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/wizardry"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/wizardry"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/ghost"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/ghost"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/detective"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/detective"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/suspense"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/suspense"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/cure"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/cure"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/food"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/food"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/life"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/life"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/science"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/science"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/history"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/history"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/workplace"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/workplace"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/war"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/war"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/horror"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/horror"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/survive"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/survive"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/school"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/school"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/machine"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/machine"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/xia"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/xia"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/BL"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/BL"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/GL"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/GL"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/girls"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/girls"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/teen"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/teen"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/girl"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/girl"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/youth"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/youth"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/four"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/four_ge"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/comicstrip"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/comicstrip"
                />
            </com.google.android.flexbox.FlexboxLayout>
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
            android:id="@+id/lengthsConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:paddingTop="4dp">
            <TextView
                android:id="@+id/length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="篇幅："/>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/lengths"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignContent="flex_start"
                app:alignItems="flex_start"
                app:flexWrap="wrap"
                app:justifyContent="flex_start"
                app:layout_constraintTop_toBottomOf="@id/length">

                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/allLength"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/all"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/shortLength"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/shortLength"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/mediumLength"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/mediumLength"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/longLength"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/longLength"
                />
            </com.google.android.flexbox.FlexboxLayout>
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
            android:id="@+id/stateConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:paddingTop="4dp">
            <TextView
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="狀態："/>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/states"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignContent="flex_start"
                app:alignItems="flex_start"
                app:flexWrap="wrap"
                app:justifyContent="flex_start"
                app:layout_constraintTop_toBottomOf="@id/state">

                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/allState"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/all"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/finished"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/finished"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/unfinished"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/unfinished"
                />
            </com.google.android.flexbox.FlexboxLayout>
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
            android:id="@+id/ordersConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:paddingTop="4dp">
            <TextView
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="排序："/>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignContent="flex_start"
                app:alignItems="flex_start"
                app:flexWrap="wrap"
                app:justifyContent="flex_start"
                app:layout_constraintTop_toBottomOf="@id/order">

                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/sortpoint"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/sortpoint"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/count_push"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/cout_push"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/score"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/score"
                />
                <com.robertlevonyan.views.chip.Chip
                    android:id="@+id/lastupdate"
                    style="@style/chipStyle"
                    app:mcv_chipText="@string/lastupdate"
                />
            </com.google.android.flexbox.FlexboxLayout>
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

</merge>