<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_setting"
          android:orderInCategory="0"
          android:title="@string/action_settings"
          app:showAsAction="never"/>

    <item android:id="@+id/action_collection"
          android:orderInCategory="1"
          android:title="@string/my_folowings"
          app:showAsAction="never"/>
    <item android:id="@+id/action_simple_traditional"
          android:orderInCategory="2"
          android:title="@string/simple_traditional"
          android:visible="false"
          app:showAsAction="never"/>
    <item android:id="@+id/donate"
          android:orderInCategory="3"
          android:title="@string/donate"
          app:showAsAction="never"/>

    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_search_white_24dp"
          android:title="@string/search"
          app:actionViewClass="android.support.v7.widget.SearchView"
          app:showAsAction="always|collapseActionView"/>

</menu>