<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/reveal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin">


    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content" android:layout_height="wrap_content"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/titleTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/secondText"
        android:textColorHint="@color/blue_grey_500"
        app:hintAnimationEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/titleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/title"
            android:padding="10dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/commentTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/secondText"
        android:textColorHint="@color/blue_grey_500"
        app:hintAnimationEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/commentEt"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="start"
            android:hint="@string/write_comment_hint"
            android:padding="10dp" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/commit"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_send_black_24px"
        android:text="@string/commit"/>

</LinearLayout>