<LinearLayout android:id="@+id/root"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bb_darkBackgroundColor"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.danteandroid.comicpush.LoginActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/accountWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="@string/userAccount"
            android:imeActionLabel="@string/nextAction"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress|textAutoComplete"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pswWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="@string/password"
            android:imeActionId="666"
            android:imeActionLabel="@string/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        android:theme="@style/FlatButton"
    />

    <TextView
        android:id="@+id/register"
        android:text="没有账号？注册"
        android:gravity="center"
        android:textColor="@color/link_selector"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:layout_height="54dp"/>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:progressBarStyle"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/dp_4"/>


</LinearLayout>
